--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,18 @@
 #Thu Mar 29 13:25:39 EAT 2018
 file.reference.commons-codec-1.10.jar=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-codec-1.10.jar
+file.reference.commons-codec-1.10.jar-1=../../../Downloads/Compressed/poi-3.17/lib/commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar-2=../../../Downloads/Compressed/poi-3.17/lib/commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar-1=../../../Downloads/Compressed/poi-3.17/lib/commons-logging-1.2.jar
+file.reference.curvesapi-1.04.jar-2=../../../Downloads/Compressed/poi-3.17/ooxml-lib/curvesapi-1.04.jar
+file.reference.junit-4.12.jar-1=../../../Downloads/Compressed/poi-3.17/lib/junit-4.12.jar
+file.reference.log4j-1.2.17.jar-1=../../../Downloads/Compressed/poi-3.17/lib/log4j-1.2.17.jar
+file.reference.poi-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-3.17.jar
+file.reference.poi-examples-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-examples-3.17.jar
+file.reference.poi-excelant-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-excelant-3.17.jar
+file.reference.poi-ooxml-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-ooxml-schemas-3.17.jar
+file.reference.poi-scratchpad-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-scratchpad-3.17.jar
+file.reference.xmlbeans-2.6.0.jar-2=../../../Downloads/Compressed/poi-3.17/ooxml-lib/xmlbeans-2.6.0.jar
 javadoc.splitindex=true
 file.reference.commons-collections4-4.1.jar-1=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-collections4-4.1.jar
 build.classes.excludes=**/*.java,**/*.form
@@ -8,7 +21,9 @@ javadoc.author=false
 build.sysclasspath=ignore
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 file.reference.commons-collections4-4.1-javadoc.jar-1=C\:\\Users\\user\\Downloads\\others\\commons-collections4-4.1-bin\\commons-collections4-4.1\\commons-collections4-4.1-javadoc.jar
 file.reference.poi-excelant-3.17.jar-1=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\poi-excelant-3.17.jar
 debug.test.classpath=${run.test.classpath}
@@ -36,7 +51,9 @@ file.reference.jcalendar-1.4.jar=E\:\\compressed\\lib\\jcalendar-1.4.jar
 javac.test.processorpath=${javac.test.classpath}
 file.reference.poi-scratchpad-3.17.jar-1=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\poi-scratchpad-3.17.jar
 dist.archive.excludes=
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 file.reference.poi-3.17.jar-1=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\poi-3.17.jar
 javadoc.notree=false
@@ -48,7 +65,46 @@ main.class=librarySystemcodes.SplashLibrary
 dist.javadoc.dir=${dist.dir}/javadoc
 file.reference.curvesapi-1.04.jar-1=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
 javadoc.additionalparam=
-javac.classpath=${file.reference.jcalendar-1.4.jar}\:${file.reference.mysql-connector-java-5.1.23-bin.jar}\:${file.reference.poi-3.17.jar}\:${file.reference.poi-examples-3.17.jar}\:${file.reference.poi-excelant-3.17.jar}\:${file.reference.poi-ooxml-3.17.jar}\:${file.reference.poi-ooxml-schemas-3.17.jar}\:${file.reference.poi-scratchpad-3.17.jar}\:${file.reference.curvesapi-1.04.jar}\:${file.reference.xmlbeans-2.6.0.jar}\:${file.reference.commons-collections4-4.1-javadoc.jar}\:${file.reference.commons-collections4-4.1.jar}\:${file.reference.poi-3.17.jar-1}\:${file.reference.poi-examples-3.17.jar-1}\:${file.reference.poi-excelant-3.17.jar-1}\:${file.reference.poi-ooxml-3.17.jar-1}\:${file.reference.poi-ooxml-schemas-3.17.jar-1}\:${file.reference.poi-scratchpad-3.17.jar-1}\:${file.reference.commons-codec-1.10.jar}\:${file.reference.commons-collections4-4.1.jar-1}\:${file.reference.commons-logging-1.2.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.log4j-1.2.17.jar}\:${file.reference.curvesapi-1.04.jar-1}\:${file.reference.xmlbeans-2.6.0.jar-1}\:${file.reference.commons-collections4-4.1-javadoc.jar-1}
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-examples-3.17.jar}:\
+    ${file.reference.poi-excelant-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.poi-examples-3.17.jar-2}:\
+    ${file.reference.poi-excelant-3.17.jar-2}:\
+    ${file.reference.poi-ooxml-3.17.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
+    ${file.reference.poi-scratchpad-3.17.jar-2}:\
+    ${file.reference.commons-codec-1.10.jar-1}:\
+    ${file.reference.commons-collections4-4.1.jar-2}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.junit-4.12.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.curvesapi-1.04.jar-2}:\
+    ${file.reference.xmlbeans-2.6.0.jar-2}:\
+    ${file.reference.poi-scratchpad-3.17.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1-javadoc.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.poi-3.17.jar-1}:\
+    ${file.reference.poi-examples-3.17.jar-1}:\
+    ${file.reference.poi-excelant-3.17.jar-1}:\
+    ${file.reference.poi-ooxml-3.17.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
+    ${file.reference.poi-scratchpad-3.17.jar-1}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.curvesapi-1.04.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.commons-collections4-4.1-javadoc.jar-1}
 javadoc.noindex=false
 file.reference.mysql-connector-java-5.1.23-bin.jar=E\:\\software\\lib\\mysql-connector-java-5.1.23-bin.jar
 annotation.processing.enabled.in.editor=false
@@ -68,7 +124,8 @@ annotation.processing.run.all.processors=true
 excludes=
 application.title=LibraryManagementSystem
 file.reference.commons-logging-1.2.jar=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-logging-1.2.jar
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 file.reference.poi-3.17.jar=C\:\\Users\\user\\Downloads\\Compressed\\poi-bin-3.17-20170915\\poi-3.17\\poi-3.17.jar
 javadoc.use=true
@@ -77,7 +134,11 @@ file.reference.junit-4.12.jar=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915
 javadoc.nonavbar=false
 file.reference.poi-examples-3.17.jar=C\:\\Users\\user\\Downloads\\Compressed\\poi-bin-3.17-20170915\\poi-3.17\\poi-examples-3.17.jar
 javadoc.windowtitle=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 file.reference.xmlbeans-2.6.0.jar-1=C\:\\Users\\user\\Documents\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\xmlbeans-2.6.0.jar
 src.dir=src
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
