new features added in the: damaged books report,maintenance report, excel import

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ file.reference.commons-collections4-4.1.jar-2=../../../Downloads/Compressed/poi-
 file.reference.commons-logging-1.2.jar-1=../../../Downloads/Compressed/poi-3.17/lib/commons-logging-1.2.jar
 file.reference.curvesapi-1.04.jar-2=../../../Downloads/Compressed/poi-3.17/ooxml-lib/curvesapi-1.04.jar
 file.reference.junit-4.12.jar-1=../../../Downloads/Compressed/poi-3.17/lib/junit-4.12.jar
+file.reference.jxl-2.6.jar=..\\..\\..\\Downloads\\Compressed\\jxl-2.6.jar
 file.reference.log4j-1.2.17.jar-1=../../../Downloads/Compressed/poi-3.17/lib/log4j-1.2.17.jar
 file.reference.poi-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-3.17.jar
 file.reference.poi-examples-3.17.jar-2=../../../Downloads/Compressed/poi-3.17/poi-examples-3.17.jar
@@ -104,7 +105,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.curvesapi-1.04.jar-1}:\
     ${file.reference.xmlbeans-2.6.0.jar-1}:\
-    ${file.reference.commons-collections4-4.1-javadoc.jar-1}
+    ${file.reference.commons-collections4-4.1-javadoc.jar-1}:\
+    ${file.reference.jxl-2.6.jar}
 javadoc.noindex=false
 file.reference.mysql-connector-java-5.1.23-bin.jar=E\:\\software\\lib\\mysql-connector-java-5.1.23-bin.jar
 annotation.processing.enabled.in.editor=false
